--- a/README.pod
+++ b/README.pod
@@ -6,7 +6,7 @@ Printer::Thermal - Interface for Thermal (and some dot-matrix and inkjet) Printe
 
 =head1 VERSION
 
-version v0.3
+version v0.4
 
 =head1 SYNOPSIS
 
@@ -47,7 +47,7 @@ For ESCE<sol>P codes refer the guide from Epson http:E<sol>E<sol>support.epson.r
 
 =head1 ATTRIBUTES
 
-=head2 $printer->usb_device_path
+=head2 usb_device_path
 
 This variable contains the path for the printer device file when connected as a usb device on UNIX-like systems. I haven't added support for Windows and it probably wont work in doz as a local printer without some modifications. Feel free to try it out and let me know what happens. This must be passed in the constructor
 
@@ -102,6 +102,8 @@ a bug report on why you need to use this.
 This contains the string in the module buffer
 
 my $print_string = $printer->print_string
+
+=head1 METHODS
 
 =head2 $printer->print();
 
