--- a/README.pod
+++ b/README.pod
@@ -6,7 +6,7 @@ Printer::Thermal - Interface for Thermal (and some dot-matrix and inkjet) Printe
 
 =head1 VERSION
 
-version v0.5
+version 0.07
 
 =head1 SYNOPSIS
 
