--- a/README.pod
+++ b/README.pod
@@ -6,7 +6,7 @@ Printer::Thermal - Interface for Thermal (and some dot-matrix and inkjet) Printe
 
 =head1 VERSION
 
-version 0.20
+version 0.21
 
 =head1 SYNOPSIS
 
@@ -122,9 +122,19 @@ Set ESC-POS Font
 
 =head2 underline
 
+Set/unset underline property
+
 =head2 emphasized
 
+Set/unset emphasized property
+
 =head2 double_height
+
+set unset double height property
+
+=head2 double_width
+
+set unset double width property
 
 =head1 METHODS
 
@@ -281,8 +291,6 @@ Prints a bunch of test strings to see if your printer is working fine/connected 
 
 =encoding utf-8
 
-=double_width
-
 =head1 NOTES
 
 =over
@@ -346,7 +354,7 @@ Shantanu Bhadoria (shantanu@cpan.org)
 
 =head1 CONTRIBUTOR
 
-Shantanu Bhadoria E<lt>shantanu att cpan dott orgE<gt>
+Shantanu Bhadoria <shantanu att cpan dott org>
 
 =head1 COPYRIGHT AND LICENSE
 
